@@ -1411,7 +1411,7 @@ public class QueryResourceTest
             new AuthConfig(),
             NoopPolicyEnforcer.instance(),
             authMapper,
-            Suppliers.ofInstance(new DefaultQueryConfig(ImmutableMap.of())),
+            Suppliers.ofInstance(new DefaultQueryConfig(Map.of())),
             null
         ),
         jsonMapper,
@@ -1801,7 +1801,7 @@ public class QueryResourceTest
             new AuthConfig(),
             NoopPolicyEnforcer.instance(),
             AuthTestUtils.TEST_AUTHORIZER_MAPPER,
-            Suppliers.ofInstance(new DefaultQueryConfig(ImmutableMap.of())),
+            Suppliers.ofInstance(new DefaultQueryConfig(Map.of())),
             null
         ),
         jsonMapper,
